deploy/HostedPCI/objects/HostedPCIConfigurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>HostedPCI connection settings</description>
    <fields>
        <fullName>apiType__c</fullName>
        <defaultValue>&quot;pxyhpci&quot;</defaultValue>
        <label>Api Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apiVersion__c</fullName>
        <defaultValue>&quot;1.0.1&quot;</defaultValue>
        <description>Api Version</description>
        <inlineHelpText>Api Version</inlineHelpText>
        <label>Api Version</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endPointAuth__c</fullName>
        <defaultValue>&quot;/iSynSApp/paymentAuth.action&quot;</defaultValue>
        <description>Assuming the full request param map is ready.Url string is made of the api url which is given by			HostedPCI + &quot;/iSynSApp/paymentAuth.action&quot;</description>
        <inlineHelpText>Assuming the full request param map is ready.Url string is made of the api url which is given by			HostedPCI + &quot;/iSynSApp/paymentAuth.action&quot;</inlineHelpText>
        <label>EndPoint  Auth</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endPointBaseUrl__c</fullName>
        <defaultValue>&quot;https://apiservice.hostedpci.com&quot;</defaultValue>
        <description>Url string is made of the api url which is given by HostedPCI</description>
        <inlineHelpText>Url string is made of the api url which is given by HostedPCI</inlineHelpText>
        <label>EndPoint BaseUrl</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>endPointCapture__c</fullName>
        <defaultValue>&quot;/iSynSApp/paymentCapture.action&quot;</defaultValue>
        <description>Assuming the full request param map is ready.Url string is made of the api url which is given by HostedPCI + &quot;/iSynSApp/paymentCapture.action&quot;</description>
        <inlineHelpText>Assuming the full request param map is ready.Url string is made of the api url which is given by HostedPCI + &quot;/iSynSApp/paymentCapture.action&quot;</inlineHelpText>
        <label>EndPoint Capture</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endPointCredit__c</fullName>
        <defaultValue>&quot;/iSynSApp/paymentCredit.action&quot;</defaultValue>
        <description>Assuming the full request param map is ready.Url string is made of the api url which is given by HostedPCI + &quot;/iSynSApp/paymentCredit.action&quot;</description>
        <inlineHelpText>Assuming the full request param map is ready.Url string is made of the api url which is given by HostedPCI + &quot;/iSynSApp/paymentCredit.action&quot;</inlineHelpText>
        <label>EndPoint Credit</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endPointSale__c</fullName>
        <defaultValue>&quot;/iSynSApp/paymentSale.action&quot;</defaultValue>
        <description>Assuming the full request param map is ready.Url string is made of the api url which is given by HostedPCI + &quot;/iSynSApp/paymentSale.action&quot;</description>
        <inlineHelpText>Assuming the full request param map is ready.Url string is made of the api url which is given by HostedPCI + &quot;/iSynSApp/paymentSale.action&quot;</inlineHelpText>
        <label>EndPoint Sale</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endPointVoid__c</fullName>
        <defaultValue>&quot;/iSynSApp/paymentVoid.action&quot;</defaultValue>
        <description>Assuming the full request param map is ready.Url string is made of the api url which is given by HostedPCI + &quot;/iSynSApp/paymentVoid.action&quot;</description>
        <inlineHelpText>Assuming the full request param map is ready.Url string is made of the api url which is given by HostedPCI + &quot;/iSynSApp/paymentVoid.action&quot;</inlineHelpText>
        <label>EndPoint Void</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endPoint_manageCCMapPhoneAPI__c</fullName>
        <defaultValue>&quot;/iSynSApp/manageCCMapPhoneAPI.action&quot;</defaultValue>
        <description>Assuming the full request param map is ready.Url string is made of the api url which is given by HostedPCI + &quot;/iSynSApp/manageCCMapPhoneAPI.action&quot;</description>
        <inlineHelpText>Assuming the full request param map is ready.Url string is made of the api url which is given by HostedPCI + &quot;/iSynSApp/manageCCMapPhoneAPI.action&quot;</inlineHelpText>
        <label>EndPoint Phone API</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>locationName__c</fullName>
        <defaultValue>&quot;salesforce1&quot;</defaultValue>
        <description>The Location(iframe) Name is given by HostedPCI</description>
        <inlineHelpText>The Location(iframe) Name is given by HostedPCI</inlineHelpText>
        <label>Location Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>siteId__c</fullName>
        <defaultValue>&quot;528160&quot;</defaultValue>
        <description>The Site Id is given by HostedPCI</description>
        <inlineHelpText>The Site Id is given by HostedPCI</inlineHelpText>
        <label>Site Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userName__c</fullName>
        <defaultValue>&quot;sampqa1stgAdmAPI&quot;</defaultValue>
        <description>The username is given by HostedPCI</description>
        <inlineHelpText>The username is given by HostedPCI</inlineHelpText>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userPassKey__c</fullName>
        <defaultValue>&quot;.OQdIHVtVJSg-W-Zr40QQGY1xyhvGjUH&quot;</defaultValue>
        <description>The passkey is given by HostedPCI</description>
        <inlineHelpText>The passkey is given by HostedPCI</inlineHelpText>
        <label>User PassKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>HostedPCISettings</label>
</CustomObject>